Add StrictMx resolver implementing StrictTransportSecurity